# GrowHFT

./: .replit  README.md  package-lock.json  pyproject.toml  replit.md  setup_guide.md
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: Sidebar.tsx  StatCard.tsx  TradeTable.tsx
client/src/hooks/: use-strategies.ts  use-trades.ts  use-user.ts
client/src/pages/: Dashboard.tsx  Settings.tsx  Strategies.tsx  Trades.tsx
script/: build.ts
server/: index.ts  routes.ts  storage.ts
server/python/: config.py  database.py  engine.py  indicators.py  main.py  money_management.py  requirements.txt  schemas.py  strategies.py
server/python/static/: index.html
shared/: routes.ts  schema.ts
shared/models/: auth.ts
