[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.128.1",
    "growwapi>=1.5.0",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.46",
    "ta-lib>=0.6.8",
    "uvicorn>=0.40.0",
]
